--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
 <!DOCTYPE html>
+<html lang="eng">
+<head>
+  <meta charset="UTF-8">
+  <title>cv</title>
+  
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
+</head>
+<body>
+  <header>
+<div class="conteiner"></div>
+<nav class="nav">
+    <ul class="nav-list">
+      <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+         
+    </ul>
+  </nav>
+
+
+  </header>
+
+  <main>
+    <div class="conteiner"></div>
+
+
+
+
+  </main>
+
+  <footer>
+    <div class="conteiner"></div>
+
+
+
+
+  </footer>
+</body>
+</html>
